# College

./: four.txt  package-lock.json  package.json  test.html  test.js  test.py  three.txt
ComputerVision/labs/: .gitignore  README.md  Week1_OpenNotes_Commented.ipynb
ComputerVision/labs/1/: one.executed.ipynb  one.ipynb
ComputerVision/labs/10/: week10.py
ComputerVision/labs/11/: mnist_cnn.h5  week11.py
ComputerVision/labs/12/: week 12.ipynb  week 12.py
ComputerVision/labs/13/: week13.py
Data Analytics in Python/exam/: five.py  four.py  three.py  two.py
Data Analytics in Python/exam 2/: five.py  one.py
Data Analytics in Python/test/: Taxes.py  bar.py  legend.py  main.py  pi.py  salary.py  seabor.py
Database Design/labs/: 1.txt  11.py  12.py  2.txt  3.txt  4.txt  7.txt  8.txt
Database Design/projects/: PNR copy.xml  iata.txt  main.py
EVENTS/ISFF25/: index.html  style.css
Machine Learning/hw/: 5.ipynb
OOP/: CMakeLists.txt  main.cpp
OOP/Project 3/: one  one.cpp  three  three.cpp  two  two.cpp
OOP/Project2/: main.py
OPL/: jsdoc.md
OPL/Android/: settings.gradle.kts
OPL/C++/: CMakeLists.txt  Computer.cpp  Dice.cpp  Game.cpp  Game.h  Human.cpp  Human.h  Player.cpp  Player.h  Serializer.cpp  Serializer.h  Tournament.cpp  Tournament.h  aiReport.txt  bugReport.txt  main.cpp  missingFeatures.txt  readme.md  test_canThrowOneDie.cpp
OPL/C++/Header Files/: Board.h  BoardView.h  Computer.h  Dice.h  Human.h  Player.h  Round.h  TextUI.h  Tournament.h
OPL/C++/Source Files/: Board.cpp  BoardView.cpp  Computer.cpp  Dice.cpp  Game.cpp  Human.cpp  Player.cpp  Round.cpp  Serializer.cpp  Tournament.cpp  main.cpp  to_remove.cpp
OPL/C++/src/: Board.cpp  Board.h  BoardView.cpp  Computer.cpp  Human.cpp  Round.h  Tournament.h
OPL/JS/: doc  doc.md  tools_used.md
OPL/JS_FINAL/: index.html  main.py  styles.css
OPL/NATE/: CMakeLists.txt
OPL/NATE/Doc/: cppRubric.docx
OPL/NATE/Header/: Board.h  BoardView.h  ComputerPlayer.h  Constants.h  HumanPlayer.h  Move.h  Player.h  PocketCoord.h  Round.h  SaveGame.h  ScoringEngine.h  Serializer.h  Stone.h  Tournament.h
OPL/NATE/Source/: 3Stones.cpp  Board.cpp  BoardView.cpp  ComputerPlayer.cpp  HumanPlayer.cpp  Move.cpp  Player.cpp  PocketCoord.cpp  Round.cpp  ScoringEngine.cpp  Serializer.cpp  Tournament.cpp
OPL/PROLOG/: canago.pl  canoga.pl  five.txt  four.txt  one  three  two.txt  zero
OPL/untitled/: main.cpp
OS/CW/: pid  pid.c  string  string.c
OS/Project1/: three  three.c  two  two.c
OS/Project2/: fib-1.txt  fib-12.txt  fib-2.txt  fib-23.txt  fib-3.txt  fib-34.txt  fib-4.txt  fib-5.txt  fib-6.txt  main  main.c
OS/Project3/: main  main.c  tempCodeRunnerFile.c
OS/Project4/: main  main.c
OS/Project5/: main  main.c
Software Design/Labs/: lab_1.cpp  lab_2.cpp  lab_3.cpp  lab_4.cpp  lab_5.cpp  tempCodeRunnerFile.cpp
(+360 files in other folders)
